Custom CSS block added, made image sizing change. Needs some discussion.

--- a/src/scss/public/_campaigns-grid.scss
+++ b/src/scss/public/_campaigns-grid.scss
@@ -20,7 +20,13 @@
 	}
 
 	.wp-post-image {
-		padding-bottom: 1em;
+		border: 0;
+		margin-bottom: 0;
+		box-shadow: none;
+		&.size-thumbnail {
+			height: auto;
+			width: auto;
+		}
 	}
 
 	.campaign-donation-stats {
