--- a/assets/css/scss/admin/_metaboxes.scss
+++ b/assets/css/scss/admin/_metaboxes.scss
@@ -112,6 +112,13 @@
         margin: 24px 0;
     }
 
+    h4.charitable-metabox-header {
+        border-bottom: 1px solid #dedede;
+        padding-bottom: 12px;
+        margin-bottom: 12px;
+        font-size: 14px;
+    }
+
     .inside > .charitable-metabox-header:first-child {
         margin-top: 0;
     }
