--- a/assets/css/scss/public/_forms.scss
+++ b/assets/css/scss/public/_forms.scss
@@ -105,6 +105,33 @@
     padding-top: 1em;
 }
 
+#charitable-gateway-selector {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    .charitable-gateway-tab {
+        margin: 0;
+        input[type=radio] {
+            display: none;
+        }
+        label {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            border: 1px solid #eee;
+            padding: 12px 15px;
+            gap: 3px;
+            border-radius: 5px;
+            svg {
+                height: 20px;
+            }
+        }
+        input[type=radio]:checked ~ label {
+            border: 1px solid #333;
+        }
+    }
+}
+
 #charitable_field_cc_cvc {
     max-width: 180px;
 
