--- a/assets/css/charitable-admin-menu.css
+++ b/assets/css/charitable-admin-menu.css
@@ -1,10 +1,12 @@
+@charset "UTF-8";
 @font-face {
-  font-family: 'charitable';
+  font-family: "charitable";
   src: url("../fonts/charitable.eot?o8h719");
   src: url("../fonts/charitable.eot?#iefixo8h719") format("embedded-opentype"), url("../fonts/charitable.ttf?o8h719") format("truetype"), url("../fonts/charitable.woff?o8h719") format("woff"), url("../fonts/charitable.svg?o8h719#charitable") format("svg");
   font-weight: normal;
-  font-style: normal; }
-[class="charitable-icon"] {
+  font-style: normal;
+}
+[class=charitable-icon] {
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -14,49 +16,62 @@
   font-size: 20px;
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+}
 
 .charitable-icon-donations:before {
-  content: "\e600";
-  font-family: 'charitable'; }
+  content: "";
+  font-family: "charitable";
+}
 
 .charitable-icon-charitable:before {
-  content: "\e601";
-  font-family: 'charitable'; }
+  content: "";
+  font-family: "charitable";
+}
 
 .charitable-icon-campaign-creator:before {
-  content: "\e602";
-  font-family: 'charitable'; }
+  content: "";
+  font-family: "charitable";
+}
 
 .charitable-icon-donations-grab:before {
-  content: "\e603";
-  font-family: 'charitable'; }
+  content: "";
+  font-family: "charitable";
+}
 
 #adminmenu .menu-icon-campaign .wp-menu-image:before {
   font-family: charitable !important;
-  content: "\e601"; }
+  content: "";
+}
 #adminmenu .toplevel_page_charitable .wp-menu-image:before {
   font-family: charitable !important;
-  content: "\e601"; }
+  content: "";
+}
 
-#available-widgets [class*="charitable_campaigns_widget"] .widget-title:before {
+#available-widgets [class*=charitable_campaigns_widget] .widget-title:before {
   font-family: charitable !important;
-  content: "\e601"; }
-#available-widgets [class*="charitable_donate_widget"] .widget-title:before {
+  content: "";
+}
+#available-widgets [class*=charitable_donate_widget] .widget-title:before {
   font-family: charitable !important;
-  content: "\e600"; }
-#available-widgets [class*="campaign_creator_widget"] .widget-title:before {
+  content: "";
+}
+#available-widgets [class*=campaign_creator_widget] .widget-title:before {
   font-family: charitable !important;
-  content: "\e602"; }
-#available-widgets [class*="charitable_donors_widget"] .widget-title:before {
-  content: "\f307";
-  top: -4px; }
-#available-widgets [class*="charitable_campaign_terms_widget"] .widget-title:before {
-  content: "\f318";
-  top: -4px; }
+  content: "";
+}
+#available-widgets [class*=charitable_donors_widget] .widget-title:before {
+  content: "";
+  top: -4px;
+}
+#available-widgets [class*=charitable_campaign_terms_widget] .widget-title:before {
+  content: "";
+  top: -4px;
+}
 
 .charitable-upgrade-notice {
   border-left-color: #f89d35;
-  background-color: #fef4e8; }
+  background-color: #fef4e8;
+}
 
 /*# sourceMappingURL=charitable-admin-menu.css.map */
