--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -6,23 +6,29 @@
   height: 100%;
   width: 100%;
   background: #000;
-  display: none; }
+  display: none;
+}
 
 .charitable-modal {
   width: 80%;
   max-width: 600px;
   padding: 2em;
   background-color: #fff;
-  overflow-y: auto; }
-  .charitable-modal .donation-form-wrapper {
-    text-align: center; }
-  .charitable-modal #charitable-donation-form {
-    text-align: left;
-    padding-top: 0; }
-  .charitable-modal .charitable-fieldset {
-    padding: 0 0 1em;
-    border-width: 0 0 1px 0; }
-    .charitable-modal .charitable-fieldset:last-of-type {
-      border: none; }
+  overflow-y: auto;
+}
+.charitable-modal .donation-form-wrapper {
+  text-align: center;
+}
+.charitable-modal #charitable-donation-form {
+  text-align: left;
+  padding-top: 0;
+}
+.charitable-modal .charitable-fieldset {
+  padding: 0 0 1em;
+  border-width: 0 0 1px 0;
+}
+.charitable-modal .charitable-fieldset:last-of-type {
+  border: none;
+}
 
 /*# sourceMappingURL=modal.css.map */
