--- a/assets/css/scss/public/_forms.scss
+++ b/assets/css/scss/public/_forms.scss
@@ -125,6 +125,9 @@
             svg {
                 height: 20px;
             }
+            &:hover {
+                box-shadow: 0 0 3px rgb(133, 200, 226);
+            }
         }
         input[type=radio]:checked ~ label {
             border: 1px solid #333;
